# ethicalpanel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS-PANEL-BRIEF.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deploy/: Caddyfile  README.md  bootstrap.sh  cloudflared-config.yml  ethical-panel.service
ethics_canvas/: agents.py  api.py  config.py  evaluator.py  llm.py  logging.py
static/: index.html
tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_evaluator.py  test_llm.py  test_llm_smoke.py  test_logging.py
