[project]
name = "ethics-filter-canvas"
version = "0.2.0"
description = "Web dashboard for 8 ethical agent personas evaluating business ideas"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "anthropic>=0.39",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["ethics_canvas*"]
exclude = ["design*", "static*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ethics_canvas"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
